[gd_scene load_steps=8 format=3 uid="uid://copp5fweehn8p"]

[ext_resource type="Script" path="res://assets/mob/mob.gd" id="1_3qidg"]
[ext_resource type="Texture2D" uid="uid://bn51sa7udc4o3" path="res://tilemap_packed.png" id="1_nih86"]

[sub_resource type="CircleShape2D" id="CircleShape2D_llhpw"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1wtg0"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3u2rq"]
radius = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eus2a"]
resource_local_to_scene = true
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jl7qi"]
resource_local_to_scene = true
radius = 8.0

[node name="Mob" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_3qidg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -4)
texture = ExtResource("1_nih86")
hframes = 12
vframes = 11
frame = 120

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_llhpw")

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="SoftCollision" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
shape = SubResource("CircleShape2D_1wtg0")

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_3u2rq")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_eus2a")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_jl7qi")
